@@ -1,23 +1,46 @@
-DIVMAKER
+<p class="josman-to-strip" align="center">
+<img alt="DiverCLI" src="docs/img/diversicon-core-writing-100px.png" >
+<br/>
+</p>
+
+#### About DivMaker
 
 
-Quick and dirty Java command line app to generate lexicons.
+Quick and dirty Java command line app to generate lexicons. It is part of <a href="https://github.com/diversicon-kb/diversicon-core" target="_blank">Diversicon project</a>
 
-GPL licensed. 
+|**Usage**|**License**|**Roadmap**|**Contributing**|
+|-----------|---------|-----------|----------------|
+| See [docs](docs) |[GPL](LICENSE.txt) | See [project milestones](../../milestones) | See [wiki](../../wiki)|
 
 
-Note to myself:
+**Features**
 
-Worked on opendata server to create `diversicon/div-wn31.xml` issuing:
+- performs basic conversion from Princeton Wordnet 3.1 to LMF XML format
+- improves Wordnet id generation
+- adds WordForms for lemma variations in WordNet 
 
-```
-MAVEN_OPTS="-Xms1g -Xmx3g -XX:-UseGCOverheadLimit" mvn clean install -U  exec:java
 
-```
+#### Dependencies
 
-To execute a single test:
+Works with a modified DKPRO UBY 0.7.0, using wordnet component at 0.7.0-div-SNAPSHOT in the branch `develop-div`: https://github.com/diversicon-kb/dkpro-uby/blob/develop-div/de.tudarmstadt.ukp.uby.integration.wordnet-gpl
 
-```
-MAVEN_OPTS="-Xmx1024M -Xss128M -XX:MaxPermSize=124M -XX:+CMSClassUnloadingEnabled" mvn  -Dtest=DivUtilsIT#test
-```
 
+#### Credits
+
+Design:
+
+* Fiona McNeill - Heriot-Watt University, Edinburgh - f.mcneill at hw.ac.uk 
+* Gabor Bella - DISI, University of Trento -  gabor.bella at unitn.it
+* David Leoni - Heriot Watt University, Edinburgh - david.leoni at unitn.it
+
+Programming:  
+
+* David Leoni - Heriot Watt University, Edinburgh - david.leoni at unitn.it
+
+Based on <a href="http://dkpro.github.io/dkpro-uby/" target="blank">DKPRO UBY framework</a>, by UKP Lab, Technische Universität Darmstadt.
+
+Made possible thanks to:
+
+&emsp;&emsp;&emsp;<a href="https://www.hw.ac.uk/schools/mathematical-computer-sciences/departments/computer-science.htm" target="_blank"> <img src="docs/img/hw.webp" width="80px" style="vertical-align:middle;"> </a> &emsp;&emsp;&emsp;<a href="https://www.hw.ac.uk/schools/mathematical-computer-sciences/departments/computer-science.htm" target="_blank"> Heriot-Watt Computer Science Department </a>  
+
+&emsp;<a href="http://kidf.eu" target="_blank"> <img style="vertical-align:middle;" width="140px" src="docs/img/kidf-scientia.png"> </a> &emsp; <a href="http://kidf.eu" target="_blank"> Knowledge in Diversity Foundation </a> <br/>
